--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans&subset=latin,cyrillic">
   <link rel="stylesheet" href="css/main.css">
-  <title>Кекстаграм</title>
+  <title>Кекстаграмище</title>
 </head>
 <body>
 
